Test with JDK 23-ea in the runtime