@@ -17,3 +17,5 @@
 -XX:GCLockerRetryAllocationCount=32
 # Allow loading dynamic agent used by JOL
 -XX:+EnableDynamicAgentLoading
+# https://bugs.openjdk.org/browse/JDK-8327134
+-Djava.security.manager=allow
