@@ -141,14 +141,14 @@
     </scm>
 
     <properties>
-        <project.build.targetJdk>21</project.build.targetJdk>
         <!-- TODO remove this property when no module overrides it -->
         <trino.error-prone.guarded-by>ERROR</trino.error-prone.guarded-by>
+        <project.build.targetJdk>23</project.build.targetJdk>
 
         <air.check.skip-spotbugs>true</air.check.skip-spotbugs>
         <air.check.skip-pmd>true</air.check.skip-pmd>
         <air.check.skip-jacoco>true</air.check.skip-jacoco>
-        <air.java.version>21.0.1</air.java.version>
+        <air.java.version>23</air.java.version>
         <air.javadoc.lint>syntax,reference,html,-missing</air.javadoc.lint>
         <air.main.basedir>${project.basedir}</air.main.basedir>
         <air.modernizer.java-version>8</air.modernizer.java-version>
@@ -175,6 +175,8 @@
             -XX:GCLockerRetryAllocationCount=10
             <!-- # Allow loading dynamic agent used by JOL -->
             -XX:+EnableDynamicAgentLoading
+            <!-- # https://bugs.openjdk.org/browse/JDK-8327134 -->
+            -Djava.security.manager=allow
         </air.test.jvm.additional-arguments.default>
         <air.test.jvm.additional-arguments>${air.test.jvm.additional-arguments.default}</air.test.jvm.additional-arguments>
 
@@ -184,6 +186,8 @@
         <dep.airlift.version>244</dep.airlift.version>
         <dep.alluxio.version>312</dep.alluxio.version>
         <dep.antlr.version>4.13.1</dep.antlr.version>
+        <!-- upgrades ASM in plugins to understand class format 67.0 -->
+        <dep.asm.version>9.7</dep.asm.version>
         <dep.avro.version>1.11.3</dep.avro.version>
         <dep.aws-sdk.version>1.12.698</dep.aws-sdk.version>
         <dep.cassandra.version>4.17.0</dep.cassandra.version>
